# HP-CLEANER-

./: .gitignore  CHANGELOG.md  CMakeLists.txt  HP_CLEANER++.rc  README.md  README.zh-TW.md  resource.h
assets/: README.md  README.zh-TW.md
cmake/: HP_CLEANERSources.cmake  HP_CLEANERTarget.cmake  README.md  README.zh-TW.md
config/: README.md  README.zh-TW.md
config/i18n/: README.md  README.txt  README.zh-TW.md  en-US.json  ja-JP.json  ko-KR.json  languages.json  zh-CN.json
docs/: INSTALL.md  INSTALL.zh-TW.md  README.md  README.zh-TW.md  RELEASE.md  RELEASE.zh-TW.md  developer-notes.zh-TW.md
docs/release-notes/: v1.0.0.md
src/: README.md  README.zh-TW.md
src/about/: AboutAppLog.cpp  AboutAppLog.h  AboutDeviceInfo.cpp  AboutDeviceInfo.h  AboutPage.cpp  AboutPageUI.cpp  AboutPageUI.h  README.md  README.zh-TW.md
src/application/: HAppLaunch.cpp  HAppLaunch.h  HAppPaths.cpp  HAppPaths.h  HAppRegistration.cpp  HAppRegistration.h  HAppSettings.cpp  HAppSettings.h  HAppShell.cpp  HAppShell.h  HAppSingleInstance.h  (+8 more)
tools/: README.md  README.zh-TW.md  apply_ja_manual.py  audit_fmt_i18n.py  audit_hardcoded_zh.py  audit_i18n.py  audit_i18n_coverage.py  batch_translate_en.py  batch_translate_ja.py  build.ps1  check_ja_pending.py  count_en_coverage.py  debug_gen.py  en_glossary.py  export_ja_remaining.py  fix_diskhealth_i18n.py  fix_fmt_i18n.py  fix_i18n_macro.py  fix_i18n_storage.py  fix_tagif.py  gen_i18n_pages.py  inject_readme_branding.py  list_ja_untranslated.py  package-portable.ps1  package-release.ps1  patch_i18n_all.py  patch_i18n_ui.py  setup_github_folder.ps1
(+105 files in other folders)
